# mteb-postprocessing-eval

./: .gitignore  README.md  main.py  postprocesser.py  pyproject.toml  utils.py
